+update:view of card on mobile. +fix:popup

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -53,7 +53,7 @@
 
         height: 100vh;
 
-        top: 1rem;
+        top: 0.5rem;
         width: 100%;
 
         text-align: start;
@@ -130,10 +130,37 @@
         display: flex;
     }
 
-    .cardSetup {
+    /* CARD PROJECT*/
 
+    .cardSetup {
+        /*height: 100%;*/
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        height: 100vh;
+        align-items: center;
+        justify-content: center;
     }
 
+    .card {
+        border: 7px solid var(--dark-text-navbar-color);
+        border-radius: 55px;
+        background-image: url("../img/waiting-carte.png") ;
+        height: 175px;
+        width: 350px;
+        transition: all .3s ease-in;
+    }
+
+    .card .cardContent {
+        display: none;
+        flex-direction: column;
+        /*color: var(--dark-text-navbar-color);*/
+        background: red ;
+        /*background: rgba(255, 255, 255, 0.08);*/
+        /*background: linear-gradient(180deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.33) 100%);*/
+        backdrop-filter: blur(20px);
+        border-radius:  0 0 45px 45px ;
+    }
 
 }
 
