--- a/src/css/style.css
+++ b/src/css/style.css
@@ -241,7 +241,7 @@ main {
 }
 
 .card {
-    border: 5px solid var(--dark-text-navbar-color);
+    border: 7px solid var(--dark-text-navbar-color);
     border-radius: 53px;
     background-image: url("../img/waiting-carte.png") ;
     width: 276px;
@@ -258,10 +258,10 @@ main {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    color: var(--dark-text-navbar-color);
-    /*background: red ;*/
-    background: rgba(255, 255, 255, 0.08);
-    background: linear-gradient(180deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.33) 100%);
+    /*color: var(--dark-text-navbar-color);*/
+    background: red ;
+    /*background: rgba(255, 255, 255, 0.08);*/
+    /*background: linear-gradient(180deg,rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.33) 100%);*/
     backdrop-filter: blur(20px);
     padding-bottom: 1.4rem;
     border-radius:  0 0 45px 45px ;
